styles - vertical-align fix

--- a/custom.css
+++ b/custom.css
@@ -60,8 +60,8 @@ main {
 	overflow-x: hidden
 }
 
-#nko .media-body, #volunteers .media-body {
-    margin-top: 40px;
+.media-body {
+    margin-top: 36px;
     transform: translateY(-50%)
 }
 
